	during previous iteration.  This improves performance for very
	large patches.
	* src/org/jcae/mesh/amibe/patch/VirtualHalfEdge2D.java (split3):
	Add an argument to collect the set of triangles which are modified
	by this method.  This method now returns the total number of edges
	swapped during processing, and 0 when vertex had not been inserted.
	This is useful for debug messages.

Mon Nov 12 13:14:47 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/Insertion.java: Use MARKED flag to
	tag edges which cannot be split, they can be skipped during next
	iterations.
	* src/org/jcae/mesh/amibe/ds/Triangle.java: New addAllowDuplicates()
	and size() methods for Triangle.List inner class.

Sun Nov 11 22:53:19 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/patch/Mesh2D.java: Store compGeomStack
	top value into a private member to avoid many calls to
	compGeomStack.peek().
	* src/org/jcae/mesh/amibe/ds/Mesh.java
	  src/org/jcae/mesh/amibe/metrics/Metric2D.java
	  src/org/jcae/mesh/amibe/patch/Mesh2D.java
	  src/org/jcae/mesh/amibe/patch/Calculus.java: Rename distance()
	into distance2(), this method now returns square distance to
	avoid unnecessary calls to Math.sqrt().
	* src/org/jcae/mesh/amibe/patch/Vertex2D.java: Modify centroid()
	method to not return a new instance, but instead move current
	instance.

Sun Nov 11 01:45:43 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/MeshOEMMView.java
	  src/org/jcae/mesh/MeshBoraViewer3d.java
	  src/org/jcae/mesh/MeshOEMMViewer3d.java
	  src/org/jcae/mesh/MeshOEMMCoarseViewer.java: Files are removed
	and put into a new viewer3d-amibe module.  This way there is no
	dependency between viewer3d and amibe modules, and build.properties
	does not have to be tweaked when compiling.

Sat Nov 10 19:22:37 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AbstractMesh.java: Class removed, it is